# ThirdParty-Packages-vcpkg

./: .gitattributes  .gitignore  AGENT.md  COREML_SUPPORT.md  README.md  agent.md  build-and-stage-preconfigured.ps1  build-and-stage.ps1  build-package.ps1  invoke-build.ps1  makeInstallPathsRelative.py  makeUniversalBinary.sh  preconfigured-packages.json  progress.md  recommendations-boost.md  util.ps1
.pipelines/: build-package-custom.yml  build-package-preconfigured.yml
.pipelines/templates/: build.yml
custom-ports/aom/: portfile.cmake
custom-ports/boost-minimal/: vcpkg.json
custom-ports/boost-tsc/: vcpkg.json
custom-ports/buildcache/: portfile.cmake  vcpkg.json
custom-ports/cairo/: 1001-tsc-force-crash-cairo-set-source-rgba.patch  portfile.cmake
custom-ports/ccache/: portfile.cmake  vcpkg.json
custom-ports/dawn/: portfile.cmake  vcpkg.json
custom-ports/directml/: portfile.cmake  usage  vcpkg.json
custom-ports/ffmpeg/: 1001-tsc-disable-aac-non-lc-profiles.patch  1001-tsc-disable-non-aac-lc.patch  1002-tsc-avcodec-fix-version-micro.patch  1002-tsc-dont-delay-cue-parsing.patch  configure_emscripten.in  configure_emscripten.sh  portfile.cmake  vcpkg.json
custom-ports/ffmpeg-cloud/: portfile.cmake  vcpkg.json
custom-ports/ffmpeg-cloud-gpl/: portfile.cmake  vcpkg.json
custom-ports/ffmpeg-cloud-gpl-features-removed/: portfile.cmake  vcpkg.json
custom-ports/ffmpeg-desktop/: portfile.cmake  vcpkg.json
custom-ports/flatbuffers/: portfile.cmake  vcpkg.json
custom-ports/flatbuffers-onnxruntime/: portfile.cmake  vcpkg.json
custom-ports/glib/: portfile.cmake  tsc-allow-threadpriority-to-fail-windows.patch
custom-ports/hellocmake/: portfile.cmake  vcpkg.json
custom-ports/hellomeson/: portfile.cmake  vcpkg.json
custom-ports/helloworld-meson/: portfile.cmake  vcpkg.json
custom-ports/kaldi/: 00001-fix-build.patch  0001-Support-openfst-1.7.6.patch  0002-Support-openfst-1.8.0.patch  0003-Support-openfst-1.8.1.patch  0004-Support-openfst-1.8.2.patch  0005-Shared-libraries-on-windows.patch  0006-Cuda-12-support.patch  portfile.cmake  vcpkg.json
custom-ports/libvorbis/: portfile.cmake  usage  vcpkg.json
custom-ports/libvpx/: portfile.cmake
custom-ports/libzip/: portfile.cmake
custom-ports/llamacpp/: portfile.cmake  vcpkg.json
custom-ports/macrotest-cmake/: README.md  portfile.cmake  vcpkg.json
custom-ports/macrotest-meson/: README.md  portfile.cmake  vcpkg.json
custom-ports/onnxruntime/: 1000-tsc-accept-python-path.patch  1001-tsc-eigen-sha.patch  1001-tsc-fix-coreml.patch  1002-tsc-accept-python-path-unix.patch  1002-tsc-fix-winml-wcos-check.patch  1003-tsc-skip-emsdk-install-if-env-set.patch  fix-cmake.patch  portfile.cmake  vcpkg.json
custom-ports/onnxruntime-gpu/: portfile.cmake  vcpkg.json
custom-ports/onnxruntime/wasm-wrapper/: CMakeLists.txt
custom-ports/openblas/: portfile.cmake
custom-ports/openfstwin/: 0001-Add-CMake-files.patch  0002-Windows-compatibility.patch  portfile.cmake  vcpkg.json
custom-ports/opus/: portfile.cmake
custom-ports/rive/: portfile.cmake  rive-config.cmake.in  usage  vcpkg.json
custom-ports/rlottie/: vcpkg.json
custom-ports/soundpipe/: CMakeLists.txt  README.md  build-soundpipe-windows.cmake  fix-msvc-void-pointer.patch  include-spa-header.patch  portfile.cmake  soundpipe-config.cmake.in  vcpkg.json
custom-ports/sqlite3/: portfile.cmake
custom-ports/stv-av1/: portfile.cmake  vcpkg.json
custom-ports/thorvg/: harden-jerryscript.patch  portfile.cmake  use-system-libwebp.patch  vcpkg.json
custom-ports/whisper-cpp/: 1002-tsc-cmake-ggml.diff  1003-tsc-disable-auto-avx512.diff  1004-tsc-respect-explicit-avx512-off.diff  1005-tsc-rename-target-whisper-basic.diff  1006-tsc-install-coreml-library.diff  1006-tsc-rename-target-whisper-vulkan.diff  portfile.cmake  vcpkg.json
custom-ports/whispercpp-basic/: 0001-BuildGgmlAsStatic.patch  0001-UpdateTargetName.patch  0001-tsc-override-whisper-shared-and-lib-name.patch  portfile.cmake  (+2 more)
custom-triplets/: arm64-ios-dynamic-debug.cmake  arm64-ios-dynamic-release.cmake  arm64-ios-static-debug.cmake  arm64-ios-static-release.cmake  arm64-osx-dynamic-debug.cmake  arm64-osx-dynamic-release-nonneon.cmake  arm64-osx-dynamic-release.cmake  arm64-osx-static-debug.cmake  arm64-osx-static-release.cmake  wasm32-emscripten-dynamic.cmake  wasm32-emscripten-static-pthread-fpic.cmake  wasm32-emscripten-static.cmake  x64-osx-dynamic-debug.cmake  x64-osx-dynamic-release.cmake  x64-osx-static-debug.cmake  x64-osx-static-release.cmake  x64-windows-dynamic-debug.cmake  x64-windows-dynamic-release.cmake  x64-windows-static-debug.cmake  x64-windows-static-md-debug.cmake
scripts/: copy-logs.ps1  invoke-build.ps1  update-version-info-json.ps1
(+121 files in other folders)
